force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/vlocity_cmt__AssignmentRule__c.object-meta.xml
<CustomObject>
    <label>Manual Queue Assignment Rule</label>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Queue Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>