force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/fields/vlocity_cmt__Priority__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Priority</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>