force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/validationRules/vlocity_cmt__ManualQueueTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__ManualQueueTypeValidation</fullName>
    <active>true</active>
    <description>A Destination Queue is required if Assignment Type is Manual Queue</description>
    <errorConditionFormula>AND(ISPICKVAL(vlocity_cmt__AssignmentType__c,&apos;Manual Queue&apos;), ISBLANK(vlocity_cmt__DestinationQueueId__c ))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__DestinationQueueId__c</errorDisplayField>
    <errorMessage>Destination Queue is required for Manual Queue Assignment Type</errorMessage>
</ValidationRule>