force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/validationRules/vlocity_cmt__SourceQueueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__SourceQueueValidation</fullName>
    <active>true</active>
    <description>A Source Queue is required</description>
    <errorConditionFormula>ISBLANK(vlocity_cmt__SourceQueueId__c)</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__SourceQueueId__c</errorDisplayField>
    <errorMessage>Source Queue is required</errorMessage>
</ValidationRule>