force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/validationRules/vlocity_cmt__SourceTaskValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__SourceTaskValidation</fullName>
    <active>true</active>
    <description>Source Task should be empty</description>
    <errorConditionFormula>NOT(ISBLANK(vlocity_cmt__SourceTaskId__c))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__SourceTaskId__c</errorDisplayField>
    <errorMessage>Source Task should be empty</errorMessage>
</ValidationRule>