force-app/main/default/objects/vlocity_cmt__AssignmentRule__c/validationRules/vlocity_cmt__UserTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__UserTypeValidation</fullName>
    <active>true</active>
    <description>A Destination User is required if Assignment Type is User</description>
    <errorConditionFormula>AND(ISPICKVAL(vlocity_cmt__AssignmentType__c,&apos;User&apos;), ISBLANK(vlocity_cmt__DestinationUserId__c))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__DestinationUserId__c</errorDisplayField>
    <errorMessage>Destination User is required for User Assignment Type</errorMessage>
</ValidationRule>